fix(comps): fixed tooltip arrow alignment with small height

--- a/src/components/ui/Tooltip/Tooltip.module.scss
+++ b/src/components/ui/Tooltip/Tooltip.module.scss
@@ -96,6 +96,18 @@ $arrow: (
     //     @include arrow-mask($mask-deg);
     //   }
     // }
+
+    &::before {
+      @if $placement == top {
+        top: -1px;
+      } @else if ($placement == right) {
+        right: -1px;
+      } @else if ($placement == bottom) {
+        bottom: -1px;
+      } @else if ($placement == left) {
+        left: -1px;
+      }
+    }
   }
 }
 
